--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Cryptoheini
-description: A list of rookie mistakes to avoid when handling crypto currencies
+description: A list of beginner mistakes to avoid when handling crypto currencies
 show_downloads: false
