--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Cryptoheini
-description: Getting into crypto wild west is full of traps. Companies and more experienced people will try to catch you early and squeeze money out of you. I did some mistakes while learning and also friends showed the need of this list. **Consider it as your drivers licence for cryptos**. For sure it will grow over time as I still make mistakes on the path to be a master :)
+description: Consider it as your drivers licence for crypto currencies
 show_downloads: false
