--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Cryptoheini
-description: Consider it as your drivers licence for crypto currencies
+description: Your drivers licence for crypto currencies
 show_downloads: false
